3-react-up-and-running-adding-td-content

--- a/react-up-and-running/src/index.css
+++ b/react-up-and-running/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+td {
+  border-top: 1px solid black;
+  cursor: cell;
+  padding: 5px;
+}
+
+table {
+  border: 1px solid black;
+  margin: 20px;
+}
