--- a/whinepad/src/components/Body.css
+++ b/whinepad/src/components/Body.css
@@ -1,7 +1,7 @@
 
 
 .Body {
-    background: url('./../images/back.jpg') no-repeat center center fixed;
+    background: url(./../images/back.jpg) no-repeat center center fixed;
     background-size: cover;
     padding: 40px;
 }
